增加 glodon 权限校验的 profile，自动创建 workbench 里面开通了 apollo 服务的 app。

--- a/apollo-core/pom.xml
+++ b/apollo-core/pom.xml
@@ -16,6 +16,10 @@
 		<github.path>${project.artifactId}</github.path>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.glodon.paas.foundation</groupId>
+			<artifactId>account-starter</artifactId>
+		</dependency>
 		<!-- json -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
