--- a/apollo-portal/pom.xml
+++ b/apollo-portal/pom.xml
@@ -15,6 +15,21 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.glodon.paas</groupId>
+			<artifactId>platform-shiro-starter</artifactId>
+			<version>1.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.6.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-ldap</artifactId>
 		</dependency>
