--- a/apollo-portal/src/main/resources/application.yml
+++ b/apollo-portal/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
       hibernate:
         query:
           plan_cache_max_size: 192 # limit query plan cache max size
+  redis:
+    host: 10.129.60.203
+    port: 30814
+    password:
 
 server:
   port: 8070
@@ -22,6 +26,6 @@ logging:
 management:
   health:
     status:
-      order: DOWN, OUT_OF_SERVICE, UNKNOWN, UP 
+      order: DOWN, OUT_OF_SERVICE, UNKNOWN, UP
 
 
