--- a/pom.xml
+++ b/pom.xml
@@ -261,9 +261,24 @@
 			</dependency>
 			<!--glodon-->
 			<dependency>
+				<groupId>com.glodon.paas</groupId>
+				<artifactId>platform-shiro-starter</artifactId>
+				<version>1.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
 				<groupId>com.glodon.paas.foundation</groupId>
 				<artifactId>account-starter</artifactId>
 				<version>0.0.2-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>com.glodon.paas.foundation</groupId>
+				<artifactId>account-ext-core</artifactId>
+				<version>0.0.9-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>com.squareup.okhttp3</groupId>
+				<artifactId>okhttp</artifactId>
+				<version>3.6.0</version>
 			</dependency>
 			<!--third party -->
 			<dependency>
